[project]
name = "money"
version = "0.1.0"
description = "Distributed academic job sourcing & refinement system"
requires-python = "==3.12.*"

[tool.uv.workspace]
members = ["packages/core", "packages/api", "packages/agents/*"]

[[tool.uv.index]]
name = "llama-cpp-python-wheels"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
llama-cpp-python = { index = "llama-cpp-python-wheels" }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
